# backflip

./: README.md  main.py  pyproject.toml
docs/: index.html
motion/: analyze_contact.py  analyze_flip.py  config_end.npy  config_start.npy  contact_history.txt  humanoid.xml  humanoid_backflip.csv  humanoid_backflip_mirrored_legs.pkl  humanoid_keyframes.xml  humanoid_stiff.xml  pkl_editor.py  pkl_to_csv.py  pkl_to_keyframes.py  play.py  play_csv.py  stand.ipynb  static.py  static_og.py  step_play.py
offline_trajopt/: Initial_guess.py  crouch.py  crouch_pinochio.py  flip_pinochio.py  forward_dynamics.py  humanoid.xml  imports_setup.py  inverse_dynamics.py  investigate.py  jump_pinochio.py  mit_wbc.py  model.py  optimization.py  optimize_casadi.py  play_torque_mujoco.py  set_home_position.py  viz.py  viz_jump.py  viz_reference.py  wbc.py  wbc_force_compare.py  wbc_plots.py  wbc_push.py
results/: inverse_dynamics_tau.npy  trajectory_solution.pkl  trajectory_solution_flip.pkl
urdf/g1_description/: g1_23dof.urdf  g1_23dof.xml
urdf/smpl/: smpl.xml
