[project]
name = "backflip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "casadi>=3.7.2",
    "drake>=1.46.0",
    "meshcat>=0.3.2",
    "mujoco>=3.3.7",
    "nlopt>=2.9.1",
    "numpy>=2.3.4",
    "pin>=3.8.0",
    "scipy>=1.16.3",
]
